--- a/.classpath
+++ b/.classpath
@@ -30,7 +30,7 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/jsf-api-2.2.0.jar"/>
-	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/jsf-impl-2.2.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="src/main/webapp/WEB-INF/lib/jsf-api-2.2.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="src/main/webapp/WEB-INF/lib/jsf-impl-2.2.0.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
